--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="inner">
                     <div class="con2">
                         <div class="left">
-                            <p><img src="/images/profile3.jpg" alt="" /></p>
+                            <p><img src="./images/profile3.jpg" alt="" /></p>
                             <ul>
                                 <li data-value="장새미">Name</li>
                                 <li data-value="2000.03.03">Birth</li>
@@ -237,7 +237,7 @@
 
                     <div class="incards">
                         <div class="incard">
-                            <div class="incard-img"><img src="/images/in1.png" alt="" /></div>
+                            <div class="incard-img"><img src="./images/in1.png" alt="" /></div>
                             <div class="incard-content">
                                 <div class="incardH">
                                     <h2>Cooking</h2>
@@ -252,7 +252,7 @@
                             </div>
                         </div>
                         <div class="incard">
-                            <div class="incard-img"><img src="/images/in2.png" alt="" /></div>
+                            <div class="incard-img"><img src="./images/in2.png" alt="" /></div>
                             <div class="incard-content">
                                 <h2>Spen with my friends</h2>
                                 <p>
@@ -264,7 +264,7 @@
                             </div>
                         </div>
                         <div class="incard">
-                            <div class="incard-img"><img src="/images/in3.png" alt="" /></div>
+                            <div class="incard-img"><img src="./images/in3.png" alt="" /></div>
                             <div class="incard-content">
                                 <h2>Trip</h2>
                                 <p>
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                         <div class="incard">
-                            <div class="incard-img"><img src="/images/in4.png" alt="" /></div>
+                            <div class="incard-img"><img src="./images/in4.png" alt="" /></div>
                             <div class="incard-content">
                                 <h2>Exhibition</h2>
                                 <p>
@@ -298,21 +298,21 @@
             <section class="team">
                 <div class="profile-images">
                     <div class="img">
-                        <img src="/images/figma.jpg" alt="" />
+                        <img src="./images/figma.jpg" alt="" />
                     </div>
-                    <div class="img"><img src="/images/Adobe_Photoshop.png" alt="" /></div>
-                    <div class="img"><img src="/images/HTML.png" alt="" /></div>
-                    <div class="img"><img src="/images/CSS.png" alt="" /></div>
-                    <div class="img"><img src="/images/ts.png" alt="" /></div>
-                    <div class="img"><img src="/images/react.png" alt="" /></div>
-                    <div class="img"><img src="/images/reduex.jpg" alt="" /></div>
-                    <div class="img"><img src="/images/query.png" alt="" /></div>
-                    <div class="img"><img src="/images/zustand.png" alt="" /></div>
-                    <div class="img"><img src="/images/JS.png" alt="" /></div>
-                    <div class="img"><img src="/images/git.png" alt="" /></div>
-                    <div class="img"><img src="/images/VERCEL.png" alt="" /></div>
-                    <div class="img"><img src="/images/gsap.png" alt="" /></div>
-                    <div class="img"><img src="/images/swiper.png" alt="" /></div>
+                    <div class="img"><img src="./images/Adobe_Photoshop.png" alt="" /></div>
+                    <div class="img"><img src="./images/HTML.png" alt="" /></div>
+                    <div class="img"><img src="./images/CSS.png" alt="" /></div>
+                    <div class="img"><img src="./images/ts.png" alt="" /></div>
+                    <div class="img"><img src="./images/react.png" alt="" /></div>
+                    <div class="img"><img src="./images/reduex.jpg" alt="" /></div>
+                    <div class="img"><img src="./images/query.png" alt="" /></div>
+                    <div class="img"><img src="./images/zustand.png" alt="" /></div>
+                    <div class="img"><img src="./images/JS.png" alt="" /></div>
+                    <div class="img"><img src="./images/git.png" alt="" /></div>
+                    <div class="img"><img src="./images/VERCEL.png" alt="" /></div>
+                    <div class="img"><img src="./images/gsap.png" alt="" /></div>
+                    <div class="img"><img src="./images/swiper.png" alt="" /></div>
                 </div>
 
                 <div class="profile-names">
@@ -338,7 +338,7 @@
                     <h1 class="timpro">TIME PROJECT</h1>
                     <div class="container2">
                         <section class="subs sub1">
-                            <div class="subimg"><img src="/images/sounds.jpg" alt="" /></div>
+                            <div class="subimg"><img src="./images/sounds.jpg" alt="" /></div>
 
                             <div class="subtexts">
                                 <h1>"Soundsgoods"</h1>
@@ -386,7 +386,7 @@
                             </div>
                         </section>
                         <section class="subs sub2">
-                            <div class="subimg"><img src="/images/loc.jpg" alt="" /></div>
+                            <div class="subimg"><img src="./images/loc.jpg" alt="" /></div>
                             <div class="subtexts">
                                 <h1>"L'occitane"</h1>
                                 <p>
@@ -430,7 +430,7 @@
                             </div>
                         </section>
                         <section class="subs sub3">
-                            <div class="subimg"><img src="/images/hosp2.jpg" alt="" /></div>
+                            <div class="subimg"><img src="./images/hosp2.jpg" alt="" /></div>
                             <div class="subtexts">
                                 <h1>"Central Veterans Hospital"</h1>
                                 <p>
@@ -459,7 +459,7 @@
                             </div>
                         </section>
                         <section class="subs sub4">
-                            <div class="subimg"><img src="/images/timho.jpg" alt="" /></div>
+                            <div class="subimg"><img src="./images/timho.jpg" alt="" /></div>
                             <div class="subtexts">
                                 <h1>"Tim Holton"</h1>
                                 <p>
@@ -508,7 +508,7 @@
                     <a href="https://jangsammy.github.io/Samsung/">
                         <div class="proSub" id="proSub-1">
                             <div class="proSub-img">
-                                <img src="/images/samg.jpg" alt="" />
+                                <img src="./images/samg.jpg" alt="" />
                             </div>
                             <div class="proSub-copy">
                                 <div class="proSub-copy-1">
@@ -539,7 +539,7 @@
                     <a href="myproject-mauve-two.vercel.app">
                         <div class="proSub" id="proSub-2">
                             <div class="proSub-img">
-                                <img src="/images/mydog.jpg" alt="" />
+                                <img src="./images/mydog.jpg" alt="" />
                             </div>
                             <div class="proSub-copy">
                                 <div class="proSub-copy-1">
@@ -574,7 +574,7 @@
                     <a href="https://jangsammy.github.io/GreenFile/">
                         <div class="proSub" id="proSub-3">
                             <div class="proSub-img">
-                                <img src="/images/un.jpg" alt="" />
+                                <img src="./images/un.jpg" alt="" />
                             </div>
                             <div class="proSub-copy">
                                 <div class="proSub-copy-1">
@@ -604,7 +604,7 @@
                     <a href="https://jangsammy.github.io/Gyeongdong/">
                         <div class="proSub" id="proSub-4">
                             <div class="proSub-img">
-                                <img src="/images/gy2.jpg" alt="" />
+                                <img src="./images/gy2.jpg" alt="" />
                             </div>
                             <div class="proSub-copy">
                                 <div class="proSub-copy-1">
@@ -656,69 +656,69 @@
                     <div class="marquee-container" id="marquee-1">
                         <div class="marquee">
                             <div class="item">
-                                <img src="/images/gpt1.png" alt="" />
+                                <img src="./images/gpt1.png" alt="" />
                             </div>
                             <div class="item with-text"><h1>ChatGPT</h1></div>
                             <div class="item">
-                                <img src="/images/gpt2.png" alt="" />
+                                <img src="./images/gpt2.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/gpt3.png" alt="" />
+                                <img src="./images/gpt3.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/gpt4.png" alt="" />
+                                <img src="./images/gpt4.png" alt="" />
                             </div>
                         </div>
                     </div>
                     <div class="marquee-container" id="marquee-2">
                         <div class="marquee">
                             <div class="item">
-                                <img src="/images/claude1.png" alt="" />
+                                <img src="./images/claude1.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/claude2.png" alt="" />
+                                <img src="./images/claude2.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/claude3.png" alt="" />
+                                <img src="./images/claude3.png" alt="" />
                             </div>
                             <div class="item with-text"><h1>Claude</h1></div>
                             <div class="item">
-                                <img src="/images/claude4.png" alt="" />
+                                <img src="./images/claude4.png" alt="" />
                             </div>
                         </div>
                     </div>
                     <div class="marquee-container" id="marquee-3">
                         <div class="marquee">
                             <div class="item">
-                                <img src="/images/gemini1.png" alt="" />
+                                <img src="./images/gemini1.png" alt="" />
                             </div>
                             <div class="item with-text"><h1>Gemini</h1></div>
                             <div class="item">
-                                <img src="/images/gemini2.png" alt="" />
+                                <img src="./images/gemini2.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/gemini3.png" alt="" />
+                                <img src="./images/gemini3.png" alt="" />
                             </div>
 
                             <div class="item">
-                                <img src="/images/gemini4.png" alt="" />
+                                <img src="./images/gemini4.png" alt="" />
                             </div>
                         </div>
                     </div>
                     <div class="marquee-container" id="marquee-4">
                         <div class="marquee">
                             <div class="item">
-                                <img src="/images/deepseek1.png" alt="" />
+                                <img src="./images/deepseek1.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/deepseek2.png" alt="" />
+                                <img src="./images/deepseek2.png" alt="" />
                             </div>
                             <div class="item">
-                                <img src="/images/deepseek3.png" alt="" />
+                                <img src="./images/deepseek3.png" alt="" />
                             </div>
                             <div class="item with-text"><h1>DeepSeek</h1></div>
                             <div class="item">
-                                <img src="/images/deepseek4.png" alt="" />
+                                <img src="./images/deepseek4.png" alt="" />
                             </div>
                         </div>
                     </div>
