--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     <div class="name"><h1>Typescript</h1></div>
                     <div class="name"><h1>REACT</h1></div>
                     <div class="name"><h1>Redux</h1></div>
-                    <div class="name"><h1>Reduex Query</h1></div>
+                    <div class="name"><h1>ReduxQuery</h1></div>
                     <div class="name"><h1>Zustand</h1></div>
                     <div class="name"><h1>JavaScript</h1></div>
                     <div class="name"><h1>GIT HUB</h1></div>
